[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'clipsafe-dl'
version = '0.1.0'
description = 'Telegram bot skeleton for lossless video workflows'
readme = 'README.md'
authors = [{name = 'ClipSafe'}]
requires-python = '>=3.11'
dependencies = [
  'aiogram>=3.7.0',
  'redis>=5.0.4',
  'httpx>=0.27.0',
  'python-dotenv>=1.0.1',
  'pydantic>=1.10.15',
  'prometheus-client>=0.20.0',
  'SQLAlchemy>=2.0',
  'boto3>=1.34.100',
  'alembic>=1.13.1',
]

[project.optional-dependencies]
dev = [
  'pytest>=7.4',
  'ruff>=0.5.0',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['app']

[tool.ruff]
line-length = 100
select = ['E', 'F', 'B', 'I']
ignore = ['E203', 'E266', 'E501']
